--- a/SuggestionBank/View/CreateSuggestion.xaml
+++ b/SuggestionBank/View/CreateSuggestion.xaml
@@ -4,12 +4,12 @@
              x:Class="SuggestionBank.View.CreateSuggestion"
              Title="Cadastrar Sugestão">
     <ContentPage.Content>
-        <StackLayout Margin="10,20,0,0">
+        <StackLayout Margin="10,20,10,0">
             <Entry Placeholder="Nome do Colaborador"/>
             <Entry Placeholder="Departamento"/>
             
-            <Editor Placeholder="Sugestão" />
-            <Editor Placeholder="Justificativa" />
+            <Editor Placeholder="Sugestão" HeightRequest="80" />
+            <Editor Placeholder="Justificativa" HeightRequest="80" />
             
             <Button Text="Salvar" />
         </StackLayout>
