--- a/SuggestionBank/App.xaml
+++ b/SuggestionBank/App.xaml
@@ -1,27 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SuggestionBank.App">
+<Application
+    x:Class="SuggestionBank.App"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <Application.Resources>
         <Style TargetType="Button">
             <Setter Property="CornerRadius" Value="20" />
-            <Setter Property="BackgroundColor" Value="#0D7DD5" />
+            <Setter Property="BackgroundColor" Value="#B92E1A" />
             <Setter Property="TextColor" Value="#fff" />
         </Style>
 
-        <Style TargetType="Frame" x:Key="EntryFrame">
+        <Style x:Key="EntryFrame" TargetType="Frame">
             <Setter Property="HasShadow" Value="True" />
             <Setter Property="CornerRadius" Value="20" />
             <Setter Property="Padding" Value="5" />
-            <Setter Property="Margin" Value="1,0"/>
-            <Setter Property="Background" Value="#fff"/>
+            <Setter Property="Margin" Value="1,0" />
+            <Setter Property="Background" Value="#fff" />
         </Style>
 
         <Style TargetType="Entry">
-            <Setter Property="Opacity" Value="1" />
             <Setter Property="TextColor" Value="#000" />
-            <Setter Property="Opacity" Value="0.6" />
-            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="PlaceholderColor" Value="#202020" />
+        </Style>
+
+        <Style TargetType="Editor">
+            <Setter Property="TextColor" Value="#000" />
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="PlaceholderColor" Value="#202020" />
+        </Style>
+
+        <Style TargetType="Label">
+            <Setter Property="TextColor" Value="#202020" />
         </Style>
     </Application.Resources>
 </Application>
