--- a/SuggestionBank/View/CreateSuggestion.xaml
+++ b/SuggestionBank/View/CreateSuggestion.xaml
@@ -1,17 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SuggestionBank.View.CreateSuggestion"
-             Title="Cadastrar Sugestão">
+<ContentPage
+        x:Class="SuggestionBank.View.CreateSuggestion"
+        xmlns="http://xamarin.com/schemas/2014/forms"
+        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+        Title="Cadastrar Sugestão">
     <ContentPage.Content>
-        <StackLayout Margin="10,20,10,0">
-            <Entry Text="{Binding Suggestions.Collaborator}" Placeholder="Nome do Colaborador"/>
-            <Entry Text="{Binding Suggestions.Departament}" Placeholder="Departamento"/>
+        <ScrollView>
+            <StackLayout Margin="10" Spacing="0">
+                <Label Padding="10,0" Text="Nome do Colaborador" />
+                <Entry Margin="0,0,0,10" Text="{Binding Suggestions.Collaborator}" />
+                <Label Padding="10,0" Text="Departamento" />
+                <Picker
+                        Margin="0,0,0,10"
+                        ItemDisplayBinding="{Binding Name}"
+                        ItemsSource="{Binding ListDepartment}"
+                        SelectedItem="{Binding DepartmentSelected}" />
+                <Label Padding="10,0" Text="Sugestão" />
+                <Editor
+                        Margin="0,0,0,10"
+                        HeightRequest="80"
+                        Text="{Binding Suggestions.Suggestion}" />
+                <Label Padding="10,0" Text="Justificativa" />
+                <Editor
+                        Margin="0,0,0,10"
+                        HeightRequest="80"
+                        Text="{Binding Suggestions.Justification}" />
 
-            <Editor Text="{Binding Suggestions.Suggestion}" Placeholder="Sugestão" HeightRequest="80" />
-            <Editor Text="{Binding Suggestions.Justification}" Placeholder="Justificativa" HeightRequest="80" />
-
-            <Button Text="Salvar" Command="{Binding SaveCommand}" />
-        </StackLayout>
+                <Button
+                        Command="{Binding SaveCommand}"
+                        Text="Salvar"
+                        VerticalOptions="EndAndExpand" />
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
